@@ -1,6 +1,11 @@
 ChangeLog for the Qt GUI to Astrophotography
 
-2019093:
+20190904:
+	* add tooltips (don't work when generated from QtCreator)
+	* fix orientation of CalibrationDisplay
+	* add Labels to guiderbuttons
+
+20190903:
 	* better buttons in calculator dialog
 	* add dec rate spinbox in CalibrationCalculatorDialog
 	* make scales of both axes equal in ClibrationDisplayWidget
